buildscript {
    repositories {
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

bootJar {
    baseName = 'gs-crud-with-vaadin'
    version =  '0.1.0'
}


/*
compileJava {
    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}

compileTestJava {
    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}

test {
    jvmArgs += ["--add-modules", "java.xml.bind"]
}
*/
repositories {
    mavenCentral()
    maven { url "https://maven.vaadin.com/vaadin-addons" }
    maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
    jcenter()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencyManagement {
  imports {
    mavenBom 'com.vaadin:vaadin-bom:10.0.11'
  }
}

dependencies {
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile("com.vaadin:vaadin-spring-boot-starter")
    compile("com.h2database:h2")
    testCompile("junit:junit")
    testCompile("org.springframework.boot:spring-boot-starter-test")
    compile "io.springfox:springfox-data-rest:2.9.2"
    compile "io.springfox:springfox-bean-validators:2.9.2"
    compile 'io.springfox:springfox-swagger-ui:2.9.2'
    compile "io.springfox:springfox-swagger2:2.9.2-SNAPSHOT"
    compile "joda-time:joda-time:2.2"


}
